# parallel-prog-itis

./: .gitignore  CMakeLists.txt
ParallelProgItis/: CMakeLists.txt  ParallelProgItis.cpp  ParallelProgItis.h
src/: main.cpp
src/mpi/: dijkstra.cpp  graph_tools.cpp  map.cpp  mpi_ex1.cpp  mpi_ex2.cpp  mpi_ex3.cpp  mpi_ex4.cpp  mpi_ex5.cpp  mpi_ex6.cpp  mpi_ex7.cpp  mpi_ex8.cpp  mpie.h  prima.cpp  qsort.cpp
src/openmp/: exercuses.h  omp_ex1.cpp  omp_ex10.cpp  omp_ex11.cpp  omp_ex12.cpp  omp_ex13.cpp  omp_ex2.cpp  omp_ex3.cpp  omp_ex4.cpp  omp_ex5.cpp  omp_ex6.cpp  omp_ex7.cpp  omp_ex8.cpp  omp_ex9.cpp  openmpe.h
src/openmp/examples/: binom.cpp  compute_pi.cpp  examples.h  hello.cpp  increment.cpp
